# ball-machine-chambers

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
chambers/: CMakeLists.txt
chambers/guard/: CMakeLists.txt
chambers/guard/python/: convert_images.py
chambers/guard/src/: guard.cpp  guard.hpp  image_data.hpp
chambers/portals/: CMakeLists.txt
chambers/portals/include/canvas_ity/: canvas_ity.hpp
chambers/portals/src/: canvas_ity.cpp  portal.cpp  portal.hpp  portals.cpp  portals_chamber.cpp  portals_chamber.hpp
chambers/portals/src/utils/: image.cpp  image.hpp
chambers/simple_example/: CMakeLists.txt
chambers/simple_example/src/: simple_chamber.cpp
cmake/: LibPhysics.cmake
examples/: CMakeLists.txt
examples/guard/src/: guard.cpp
examples/portals/: CMakeLists.txt
examples/portals/python/: convert_images.py
examples/portals/src/: images.hpp  portal.cpp  portals_chamber.cpp  portals_chamber.hpp
examples/portals/src/utils/: canvas.hpp
include/canvas_ity/: canvas_ity.hpp
include/libchamber/: exports.h  print.hpp
include/libphysics/: physics.h
libchamber/: CMakeLists.txt
libchamber/cmake/: LibPhysics.cmake
libchamber/include/libchamber/: chamber.hpp
libchamber/src/libchamber/: chamber.cpp  exports.h
src/: BallMachine.cpp  BallMachine.hpp  Image.cpp  Image.hpp  main.cpp  main.hpp  math.hpp  printer.cpp  printer.hpp
src/libchamber/: exports.h
